--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://davidecandia.onrender.com",
+  "homepage": "https://davidecandia.github.io/cv/",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
